2.5.73 (2025-07-28)

- Stream rendering optimization, reduced CPU usage.
- Fix: do not automatically add tools to the agent when the inline plugin is enabled but the Tools option is not enabled.
- Fix: corrected saving of the last context element when the stream is interrupted.
- Fix: unlock response regeneration after stopped event.

2.5.72 (2025-07-27)

- Improved stop command.

2.5.71 (2025-07-27)

- Added a new working mode: Computer Use for autonomous navigation in the user's environment (beta; utilizes the Computer Use remote tool and the model computer-use-preview).
- Added a new remote tool: Remote MCP (with configuration in Settings -> Remote Tools).
- Added a new remote tool: File Search (with configuration in Settings -> Remote Tools).
- Added a new option Always continue... to Agent (autonomous) plugin settings.

2.5.70 (2025-07-26)

- Added separate config for Responses API for expert instances.
- Added a new model: mistral-small3.1.

2.5.69 (2025-07-25)

- The Responses API and remote tools are now allowed in Agent (autonomous) and Expert modes. Default: disabled.
- Added separate options in the configuration for enabling the Responses API in: Config -> Agents and Experts.
- Improved expert and agents system prompt.

2.5.68 (2025-07-25)

- Added a separate configuration to enable or disable native function calls in both agent and expert modes.

2.5.67 (2025-07-25)

- Added native tool call functionality in Experts.
- Enhanced the use of multiple tool calls in Experts.
- Fixed the display of Expert names when responding.
- Improved context history handling in Experts.

2.5.66 (2025-07-24)

- Fixed the issue where input focus was lost on the initial context summary.
- Added input focus at application startup.

2.5.65 (2025-07-24)

- Improved expert and agent calls and response rendering.
- Fixed duplicate goal completion in autonomous mode.

2.5.64 (2025-07-23)

- Updated the system prompts.